--- a/NUnitTestProject1/NUnitTestProject1.csproj
+++ b/NUnitTestProject1/NUnitTestProject1.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="nunit.core">
       <HintPath>..\packages\NUnitTestAdapter.WithFramework.2.0.0\lib\nunit.core.dll</HintPath>
       <Private>False</Private>
@@ -70,6 +71,7 @@
     <Compile Include="Pages\RegisterPage.cs" />
     <Compile Include="Pages\ReportsPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\LoginPageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
